--- a/appstore/App_Store_Data_Analysis.ipynb
+++ b/appstore/App_Store_Data_Analysis.ipynb
@@ -1116,56 +1116,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
-      "metadata": {
-        "id": "-vrx-_cXTIGX"
-      },
+      "execution_count": 54,
+      "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "(0     0.000235\n",
-              " 1     0.000063\n",
-              " 2     0.000076\n",
-              " 3     0.000191\n",
-              " 4     0.000126\n",
-              " 5     0.000095\n",
-              " 6     0.000082\n",
-              " 7     0.000293\n",
-              " 8     0.000101\n",
-              " 9     0.000069\n",
-              " 10    0.000544\n",
-              " 11    0.000122\n",
-              " 12    0.000073\n",
-              " 13    0.000066\n",
-              " 14    0.000072\n",
-              " 15    0.000090\n",
-              " 16    0.000113\n",
-              " 17    0.000104\n",
-              " 18    0.000095\n",
-              " 19    0.000091\n",
-              " 20    0.000068\n",
-              " 21    0.000058\n",
-              " 22    0.000074\n",
-              " Name: size_bytes, dtype: float64,\n",
-              " 2)"
+              "0     235.47\n",
+              "1      62.80\n",
+              "2      75.63\n",
+              "3     191.34\n",
+              "4     126.20\n",
+              "5      94.73\n",
+              "6      81.94\n",
+              "7     293.07\n",
+              "8     101.13\n",
+              "9      68.78\n",
+              "10    543.63\n",
+              "11    121.64\n",
+              "12     73.05\n",
+              "13     66.27\n",
+              "14     71.62\n",
+              "15     90.29\n",
+              "16    112.73\n",
+              "17    104.06\n",
+              "18     94.62\n",
+              "19     90.73\n",
+              "20     68.40\n",
+              "21     57.80\n",
+              "22     73.82\n",
+              "Name: size_bytes, dtype: float64"
             ]
           },
-          "execution_count": 49,
+          "execution_count": 54,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "\"\"\"\n",
-        "What is the average size in megabytes for each genre for apps rated 4.0 or higher?\n",
-        "(NOTE: Use rating of current version.)\n",
+        "four_rated_apps = dataset.query('user_rating_ver >= 4.0')\n",
+        "mean_size_per_genre_of_four_rated_apps = four_rated_apps.groupby('prime_genre')['size_bytes'].mean().reset_index()\n",
         "\n",
-        "> STEP 1: Get all apps rated 4.0 or higher.\n",
-        "> STEP 2: Calculate mean app size per genre.\n",
-        "> STEP 3: Convert Series values from KB to MB by dividing values by 1_000_000.\n",
-        "\"\"\"\n",
-        "# This looks wrong... whatever."
+        "round(mean_size_per_genre_of_four_rated_apps['size_bytes'] / 1_000_000, 2)"
       ]
     },
     {
