--- a/appstore/App_Store_Data_Analysis.ipynb
+++ b/appstore/App_Store_Data_Analysis.ipynb
@@ -71,8 +71,7 @@
    "outputs": [],
    "source": [
     "import numpy as numpy    # Numerical Python Operations\n",
-    "import pandas as pandas      # DataFrame Operations\n",
-    "import seaborn as sns "
+    "import pandas as pandas      # DataFrame Operations\n"
    ]
   },
   {
@@ -627,17 +626,93 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5903</th>\n",
-       "      <td>1102828488</td>\n",
-       "      <td>Delicious - Emily’s Message in a Bottle</td>\n",
-       "      <td>336847872</td>\n",
+       "      <th>3998</th>\n",
+       "      <td>1014277964</td>\n",
+       "      <td>SelfieCity</td>\n",
+       "      <td>71816192</td>\n",
        "      <td>USD</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>333</td>\n",
-       "      <td>42</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>252</td>\n",
+       "      <td>1</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>1.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.9.1</td>\n",
+       "      <td>4+</td>\n",
+       "      <td>Photo &amp; Video</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3414</th>\n",
+       "      <td>962194608</td>\n",
+       "      <td>Google Photos - unlimited photo and video storage</td>\n",
+       "      <td>160215040</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>88742</td>\n",
+       "      <td>1145</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.17.0</td>\n",
+       "      <td>4+</td>\n",
+       "      <td>Photo &amp; Video</td>\n",
+       "      <td>37</td>\n",
+       "      <td>5</td>\n",
+       "      <td>75</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3422</th>\n",
+       "      <td>962967653</td>\n",
+       "      <td>Puzzle it to 10</td>\n",
+       "      <td>55441408</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>4+</td>\n",
+       "      <td>Games</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3423</th>\n",
+       "      <td>962969578</td>\n",
+       "      <td>Blackbox - think outside the box</td>\n",
+       "      <td>100392960</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>80058</td>\n",
+       "      <td>444</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.3.10</td>\n",
+       "      <td>4+</td>\n",
+       "      <td>Games</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3434</th>\n",
+       "      <td>963668030</td>\n",
+       "      <td>Coco Pony - My Dream Pet</td>\n",
+       "      <td>256222208</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1627</td>\n",
+       "      <td>60</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.2.0</td>\n",
        "      <td>4+</td>\n",
        "      <td>Games</td>\n",
        "      <td>38</td>\n",
@@ -646,174 +721,98 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4124</th>\n",
-       "      <td>1024000488</td>\n",
-       "      <td>浪漫庄园(自由创造你的梦想)</td>\n",
-       "      <td>97181696</td>\n",
+       "      <th>3435</th>\n",
+       "      <td>963753435</td>\n",
+       "      <td>PlayGround • Music At Your Fingertips</td>\n",
+       "      <td>190360576</td>\n",
        "      <td>USD</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>36</td>\n",
-       "      <td>17</td>\n",
+       "      <td>150</td>\n",
+       "      <td>16</td>\n",
        "      <td>4.5</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>1.3.9</td>\n",
-       "      <td>12+</td>\n",
-       "      <td>Games</td>\n",
-       "      <td>40</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5896</th>\n",
-       "      <td>1102520605</td>\n",
-       "      <td>CNN Politics</td>\n",
-       "      <td>30449664</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>254</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.8.2</td>\n",
-       "      <td>4+</td>\n",
-       "      <td>News</td>\n",
-       "      <td>37</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1234</th>\n",
-       "      <td>510461758</td>\n",
-       "      <td>Bike Race - Top Motorcycle Racing Games</td>\n",
-       "      <td>120187904</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>405007</td>\n",
-       "      <td>4053</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>7.3.11</td>\n",
-       "      <td>4+</td>\n",
-       "      <td>Games</td>\n",
-       "      <td>38</td>\n",
-       "      <td>5</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1236</th>\n",
-       "      <td>510855668</td>\n",
-       "      <td>Amazon Music</td>\n",
-       "      <td>77778944</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>106235</td>\n",
-       "      <td>4605</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>6.5.0</td>\n",
+       "      <td>1.2.0</td>\n",
        "      <td>4+</td>\n",
        "      <td>Music</td>\n",
        "      <td>37</td>\n",
        "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4230</th>\n",
-       "      <td>1032240256</td>\n",
-       "      <td>【真・お絵かきパズル】〇〇投げてみた結果ｗｗ　完全無料！</td>\n",
-       "      <td>69857280</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.1.0</td>\n",
-       "      <td>4+</td>\n",
-       "      <td>Games</td>\n",
-       "      <td>40</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5791</th>\n",
-       "      <td>1097469600</td>\n",
-       "      <td>Beyond 14</td>\n",
-       "      <td>99192832</td>\n",
+       "      <th>3464</th>\n",
+       "      <td>966758561</td>\n",
+       "      <td>GOAT: Buy &amp; Sell Sneakers</td>\n",
+       "      <td>133889024</td>\n",
        "      <td>USD</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>426</td>\n",
-       "      <td>29</td>\n",
+       "      <td>3116</td>\n",
+       "      <td>147</td>\n",
        "      <td>4.5</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>1.1.2</td>\n",
+       "      <td>1.9.2</td>\n",
+       "      <td>9+</td>\n",
+       "      <td>Shopping</td>\n",
+       "      <td>37</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3466</th>\n",
+       "      <td>966802035</td>\n",
+       "      <td>LINE FIGHTERS</td>\n",
+       "      <td>136356864</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0.7</td>\n",
        "      <td>4+</td>\n",
        "      <td>Games</td>\n",
        "      <td>38</td>\n",
        "      <td>5</td>\n",
-       "      <td>6</td>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5778</th>\n",
-       "      <td>1096825045</td>\n",
-       "      <td>Coin Dozer: Casino</td>\n",
-       "      <td>151451648</td>\n",
+       "      <th>3480</th>\n",
+       "      <td>968213298</td>\n",
+       "      <td>Bike Race Level 100</td>\n",
+       "      <td>98312192</td>\n",
        "      <td>USD</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>340</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>12+</td>\n",
+       "      <td>1.7.1</td>\n",
+       "      <td>9+</td>\n",
        "      <td>Games</td>\n",
-       "      <td>37</td>\n",
+       "      <td>40</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1252</th>\n",
-       "      <td>515094775</td>\n",
-       "      <td>Bazaart Photo Editor Pro and Picture Collage M...</td>\n",
-       "      <td>120474624</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4909</td>\n",
-       "      <td>479</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.6.3</td>\n",
-       "      <td>4+</td>\n",
-       "      <td>Photo &amp; Video</td>\n",
-       "      <td>37</td>\n",
        "      <td>2</td>\n",
-       "      <td>13</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3866</th>\n",
-       "      <td>1001501844</td>\n",
-       "      <td>Deliveroo: Restaurant Delivery - Order Food Ne...</td>\n",
-       "      <td>62734336</td>\n",
+       "      <th>3495</th>\n",
+       "      <td>969447060</td>\n",
+       "      <td>Eye Training Cocololo-3dステレオグラム視力回復アプリ-</td>\n",
+       "      <td>66277376</td>\n",
        "      <td>USD</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1702</td>\n",
-       "      <td>580</td>\n",
-       "      <td>4.5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>2.16.1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.2</td>\n",
        "      <td>12+</td>\n",
-       "      <td>Food &amp; Drink</td>\n",
+       "      <td>Medical</td>\n",
        "      <td>37</td>\n",
        "      <td>0</td>\n",
-       "      <td>9</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -822,52 +821,52 @@
       ],
       "text/plain": [
        "              id                                         track_name  \\\n",
-       "5903  1102828488            Delicious - Emily’s Message in a Bottle   \n",
-       "4124  1024000488                                     浪漫庄园(自由创造你的梦想)   \n",
-       "5896  1102520605                                       CNN Politics   \n",
-       "1234   510461758            Bike Race - Top Motorcycle Racing Games   \n",
-       "1236   510855668                                       Amazon Music   \n",
-       "4230  1032240256                       【真・お絵かきパズル】〇〇投げてみた結果ｗｗ　完全無料！   \n",
-       "5791  1097469600                                          Beyond 14   \n",
-       "5778  1096825045                                 Coin Dozer: Casino   \n",
-       "1252   515094775  Bazaart Photo Editor Pro and Picture Collage M...   \n",
-       "3866  1001501844  Deliveroo: Restaurant Delivery - Order Food Ne...   \n",
+       "3998  1014277964                                         SelfieCity   \n",
+       "3414   962194608  Google Photos - unlimited photo and video storage   \n",
+       "3422   962967653                                    Puzzle it to 10   \n",
+       "3423   962969578                   Blackbox - think outside the box   \n",
+       "3434   963668030                           Coco Pony - My Dream Pet   \n",
+       "3435   963753435              PlayGround • Music At Your Fingertips   \n",
+       "3464   966758561                          GOAT: Buy & Sell Sneakers   \n",
+       "3466   966802035                                      LINE FIGHTERS   \n",
+       "3480   968213298                                Bike Race Level 100   \n",
+       "3495   969447060            Eye Training Cocololo-3dステレオグラム視力回復アプリ-   \n",
        "\n",
        "      size_bytes currency  price  rating_count_tot  rating_count_ver  \\\n",
-       "5903   336847872      USD    0.0               333                42   \n",
-       "4124    97181696      USD    0.0                36                17   \n",
-       "5896    30449664      USD    0.0               254                 1   \n",
-       "1234   120187904      USD    0.0            405007              4053   \n",
-       "1236    77778944      USD    0.0            106235              4605   \n",
-       "4230    69857280      USD    0.0                12                 1   \n",
-       "5791    99192832      USD    0.0               426                29   \n",
-       "5778   151451648      USD    0.0              2024               340   \n",
-       "1252   120474624      USD    0.0              4909               479   \n",
-       "3866    62734336      USD    0.0              1702               580   \n",
+       "3998    71816192      USD    0.0               252                 1   \n",
+       "3414   160215040      USD    0.0             88742              1145   \n",
+       "3422    55441408      USD    0.0                27                 2   \n",
+       "3423   100392960      USD    0.0             80058               444   \n",
+       "3434   256222208      USD    0.0              1627                60   \n",
+       "3435   190360576      USD    0.0               150                16   \n",
+       "3464   133889024      USD    0.0              3116               147   \n",
+       "3466   136356864      USD    0.0                 1                 1   \n",
+       "3480    98312192      USD    0.0                 1                 1   \n",
+       "3495    66277376      USD    0.0                 6                 3   \n",
        "\n",
        "      user_rating  user_rating_ver     ver cont_rating    prime_genre  \\\n",
-       "5903          4.0              5.0     1.5          4+          Games   \n",
-       "4124          4.5              5.0   1.3.9         12+          Games   \n",
-       "5896          3.0              5.0   2.8.2          4+           News   \n",
-       "1234          4.5              5.0  7.3.11          4+          Games   \n",
-       "1236          4.5              5.0   6.5.0          4+          Music   \n",
-       "4230          4.5              5.0   1.1.0          4+          Games   \n",
-       "5791          4.5              5.0   1.1.2          4+          Games   \n",
-       "5778          5.0              5.0     1.6         12+          Games   \n",
-       "1252          4.5              5.0   4.6.3          4+  Photo & Video   \n",
-       "3866          4.5              5.0  2.16.1         12+   Food & Drink   \n",
+       "3998          5.0              5.0   2.9.1          4+  Photo & Video   \n",
+       "3414          5.0              5.0  2.17.0          4+  Photo & Video   \n",
+       "3422          4.5              5.0     2.9          4+          Games   \n",
+       "3423          5.0              5.0  1.3.10          4+          Games   \n",
+       "3434          4.5              5.0   1.2.0          4+          Games   \n",
+       "3435          4.5              5.0   1.2.0          4+          Music   \n",
+       "3464          4.5              5.0   1.9.2          9+       Shopping   \n",
+       "3466          5.0              5.0   1.0.7          4+          Games   \n",
+       "3480          5.0              5.0   1.7.1          9+          Games   \n",
+       "3495          5.0              5.0     2.2         12+        Medical   \n",
        "\n",
        "      sup_devices.num  ipadSc_urls.num  lang.num  vpp_lic  \n",
-       "5903               38                5        11        1  \n",
-       "4124               40                5         1        1  \n",
-       "5896               37                0         1        1  \n",
-       "1234               38                5         9        1  \n",
-       "1236               37                5         6        1  \n",
-       "4230               40                0         1        1  \n",
-       "5791               38                5         6        1  \n",
-       "5778               37                5         1        1  \n",
-       "1252               37                2        13        1  \n",
-       "3866               37                0         9        1  "
+       "3998               37                0         5        1  \n",
+       "3414               37                5        75        1  \n",
+       "3422               38                0         5        1  \n",
+       "3423               37                0         1        1  \n",
+       "3434               38                5        11        1  \n",
+       "3435               37                5         1        1  \n",
+       "3464               37                5         1        1  \n",
+       "3466               38                5         4        1  \n",
+       "3480               40                5         2        1  \n",
+       "3495               37                0         1        1  "
       ]
      },
      "execution_count": 6,
@@ -1489,7 +1488,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56.00000000000001% of the top 25 highly rated apps are paid.\n"
+      "44.0% of the top 25 highly rated apps are paid.\n"
      ]
     }
    ],
